--- a/.github/workflows/airflow-deploy.yml
+++ b/.github/workflows/airflow-deploy.yml
@@ -1,14 +1,9 @@
 name: Deploy Airflow
 
-# Define the events that trigger this workflow
 on:
   push:
     branches:
-      - test  # Triggers the workflow on push to the 'test' branch
-  # Optionally, you can add more triggers like pull requests, etc.
-  # pull_request:
-  #   branches:
-  #     - test
+      - test  # Adjust this to match your branch
 
 jobs:
   build-and-deploy:
@@ -25,6 +20,10 @@ jobs:
         run: |
           docker build -t my-airflow-image .
 
+      - name: List Docker images
+        run: |
+          docker images
+
       - name: Run Airflow containers
         run: |
           docker-compose up -d
@@ -32,3 +31,7 @@ jobs:
       - name: Check Airflow status
         run: |
           docker-compose ps
+
+      - name: View Airflow logs
+        run: |
+          docker-compose logs
